fixing responsive on mobile and tablet

--- a/less/style.less
+++ b/less/style.less
@@ -22,53 +22,7 @@
 img{
 	display: block;
 }
-body {
-  background: #d9f2f2 url('../img/sky.png') left -50px repeat-x;
-}
-#mountains {
-  background-image: url('../img/sthelens.png'), url('../img/hood.png');
-  background-position: 5% @topsky+30, 110% @topsky+55;
-  background-repeat: no-repeat;
-}
-#clouds{
-  background: url('../img/clouds.png') repeat-x 250% @topsky - 60;
-}
-#farHills {
-  background: url('../img/far-hills.png') center @topsky+125 repeat-x;
-}
-#forest {
-  background: url('../img/forest.png') center @topsky+145 repeat-x;
-}
-#water {
-  background: url('../img/water.png') center @topsky+291 repeat-x;
-}
-#city {
-  background: url('../img/total-ground.png') center @topsky+179 repeat-x;
-}
-#drop {
-  position: relative;
-  width: 264px;
-  height: 291px;
-  .center-block;
-  top: @topsky - 30;
-  z-index: 50;
-  img {
-    .center-block;
-  }
-}
-#bridge {
-  background: url('../img/steel-bridge.png') no-repeat center @topsky+75;
-}
-#lift{
-  left: 50%;
-  top: @topsky+237;
-  position: absolute;
-  width: 342px;
-  height: 240px;
-  background: url("../img/lift.png") 0 0 no-repeat;
-  margin-left: -176px;
-  z-index: 75;
-}
+
 .main{
 	height: 1195px;
 }
@@ -207,7 +161,6 @@ body {
 }
 #map {
   min-height: 600px;
-
 }
 
 #contact{
